[package]
name = "thingbuf_hangup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time"] }
thingbuf = "0.1.4"
log = "0.4.21"
env_logger = "0.11.3"
